# sp-frontend

./: .gitignore  CMakeLists.txt  build-linux.sh  build-windows.bat  imgui.ini  main.cpp  readme.md  seed.csv  settings.sps  sp-frontend.vcxproj  sp-frontend.vcxproj.filters
resources/shaders/opengl/: Quaternion.glsl
resources/shaders/opengl/core/: camera.glsl  lighting.glsl  mat4.glsl  material.glsl  quat.glsl  transform.glsl
resources/shaders/opengl/dop-18/: shader-list.fs  shader-list.vs  shader.fs  shader.vs
resources/shaders/opengl/line-list/: shader.fs  shader.vs
resources/shaders/opengl/manipulator/: shader.fs  shader.vs
resources/shaders/opengl/primitive/: shader.fs  shader.vs
resources/shaders/opengl/renderer-list/: shader.vs
resources/shaders/opengl/rock/: shader-list.fs  shader-list.vs  shader.fs  shader.vs
resources/shaders/opengl/world-objects/: shader-list.fs  shader-list.vs
src/: AboutFrame.cpp  AboutFrame.h  AbstractFrame.h  Application.cpp  Application.h  EditorViewer.cpp  EditorViewer.h  GameFrame.cpp  GameFrame.h  LogFrame.cpp  LogFrame.h  MainFrame.cpp  MainFrame.h  NewProjectFrame.cpp  NewProjectFrame.h  NewSceneFrame.cpp  NewSceneFrame.h  NotificationFrame.cpp  NotificationFrame.h  ProjectExplorerFrame.cpp  ProjectExplorerFrame.h  PropertiesFrame.cpp  PropertiesFrame.h  SpAlertFrame.h  SpCameraPropertiesFrame.h  SpCloseButtonUIWindowBehaviour.h  SpFrame.h  SpGameSettings.h  SpIFrameComponent.h  SpImGui.h  SpLogEngineProvider.h  SpMemoryMapViewerFrame.cpp  SpMemoryMapViewerFrame.h  SpProject.h  SpProjectManager.cpp  SpProjectManager.h  SpPropertiesFrame.cpp  SpPropertiesFrame.h  SpPropertiesFrameComponent.h  SpPropertiesFrameComponentCamera.h  (+29 more)
src/addons/FileBrowser/: ImGuiFileBrowser.cpp  ImGuiFileBrowser.h
